<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText"
    android:background="@color/turquoise">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        android:layout_marginTop="10sp"
        android:layout_marginLeft="0sp"
        android:layout_marginRight="0sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/purple_500"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:layout_marginBottom="0sp"
            >

            <TextView
                android:id="@+id/res"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:textSize="40sp"
                android:gravity="end"
                android:text=""
                android:textColor="@color/white"
                android:background="@color/turquoise"
                android:ellipsize="start"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:scrollbars = "horizontal"
                />

        </LinearLayout>

        <LinearLayout
            style="@style/buttonsRow">

            <Button
                android:id="@+id/percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
                android:text="%"
                android:textSize="60sp" />

            <Button
                android:id="@+id/pow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
                android:text="^"
                android:textSize="60sp" />

            <Button
                android:id="@+id/log"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="1dp"
                android:layout_weight="0.25"
                android:text="lg"
                android:textSize="40sp" />

            <Button
                style="@style/opButton"
                android:id="@+id/eq"
                android:text="="
                android:onClick="equalsEvent"/>

        </LinearLayout>

        <LinearLayout
            style="@style/buttonsRow">

            <Button
                style="@style/numButton"
                android:id="@+id/one"
                android:text="1"
                 />

            <Button
                style="@style/numButton"
                android:id="@+id/two"
                android:text="2" />

            <Button
                style="@style/numButton"
                android:id="@+id/three"
                android:text="3"/>

            <Button
                style="@style/opButton"
                android:id="@+id/clear"
                android:text="c"
                android:textSize="60sp"
                android:onClick="clearEvent"/>


        </LinearLayout>

        <LinearLayout
            style="@style/buttonsRow">

            <Button
                style="@style/numButton"
                android:id="@+id/four"
                android:text="4"/>

            <Button
                style="@style/numButton"
                android:id="@+id/five"
                android:text="5"/>

            <Button
                style="@style/numButton"
                android:id="@+id/six"
                android:text="6" />

            <Button
                style="@style/opButton"
                android:id="@+id/plus"
                android:text="+" />

        </LinearLayout>


        <LinearLayout
            style="@style/buttonsRow">

            <Button
                style="@style/numButton"
                android:id="@+id/seven"
                android:text="7"
/>

            <Button
                style="@style/numButton"
                android:id="@+id/eight"
                android:text="8" />

            <Button
                style="@style/numButton"
                android:id="@+id/nine"
                android:text="9" />

            <Button
                style="@style/opButton"
                android:id="@+id/minus"
                android:text="-"  />

        </LinearLayout>

        <LinearLayout
            style="@style/buttonsRow">

            <Button
                style = "@style/numButton"
                android:id="@+id/dot"
                android:text="."
                />

            <Button
                style="@style/numButton"
                android:id="@+id/zero"
                android:text="0" />



            <Button
                style="@style/opButton"
                android:id="@+id/mult"
                android:text="*"/>

            <Button
                style="@style/opButton"
                android:id="@+id/div"
                android:text="/" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>